test_regress/t/t_source_sync_bad.out
%Error: t/t_source_sync_bad.v:17:16: syntax error, unexpected IDENTIFIER
   17 |       Invalid1 invalid1;   
      |                ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_source_sync_bad.v:20:16: syntax error, unexpected IDENTIFIER
   20 |       Invalid2 invalid2;   
      |                ^~~~~~~~
%Error: t/t_source_sync_bad.v:24:22: syntax error, unexpected IDENTIFIER, expecting "'{"
   24 |       pkg::cls::defi invalid;   
      |                      ^~~~~~~
%Error: t/t_source_sync_bad.v:30:14: syntax error, unexpected /*verilator clocker*/, expecting ',' or ';'
   30 |    logic clk /*verilator clocker*/ ;
      |              ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_source_sync_bad.v:34:1: syntax error, unexpected endmodule
   34 | endmodule
      | ^~~~~~~~~
%Error: Exiting due to
